update model desc

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -698,6 +698,22 @@
   "Strong language skills": "Starke Sprachkenntnisse",
   "Enhanced reasoning, suitable for complex tasks": "Erweiterte Logik, geeignet für komplexe Aufgaben",
   "Lightweight general-purpose model with fast response speed": "Leichtgewichtiges Allgemeinzweckmodell mit hoher Reaktionsgeschwindigkeit",
+  "Multimodal, suitable for most tasks": "Multimodale, geeignet für die meisten Aufgaben",
+  "Well-suited for handling daily tasks": "Geeignet für die Bearbeitung alltäglicher Aufgaben",
+  "Strong writing and coding skills": "Starke Schreib- und Codierungsfähigkeiten",
+  "Multimodal with fast response": "Multimodale, schnelle Reaktion",
+  "Expert in Q&A, lively expression style": "Fachkundig in Q&A, lebhafter Ausdrucksstil",
+  "Strong writing ability, high stability": "Starke Schreibfähigkeit, hohe Stabilität",
+  "Multimodal with enhanced reasoning": "Multimodale, verstärkte Argumentation",
+  "Using advanced reasoning": "Verwendung fortschrittlicher Argumentation",
+  "Good at fast coding and analysis": "Fachkundig in schnellem Coding und Analyse",
+  "Skilled in writing and generating ideas": "Fachkundig in Schreiben und Ideenentwicklung",
+  "Strong general capabilities, stable writing": "Starke allgemeine Fähigkeiten, stabiles Schreiben",
+  "Strongest in coding, suitable for complex tasks": "Stärkste Codierungskompetenz, geeignet für komplexe Aufgaben",
+  "Deep reasoning enhancement": "Tiefgreifende Verstärkung der Argumentation",
+  "Enhanced contextual understanding and structural reasoning": "Verstärktes Kontextverständnis und strukturelle Argumentation",
+  "Strengthened logical reasoning and knowledge expression": "Verstärkte logische Argumentation und Wissensdarstellung",
+  "Powerful multimodal capabilities, proficient in graphics, text, and code": "Starke multimodale Fähigkeiten, proficient in Grafiken, Text und Code",
   "Please select at least one model.": "Bitte wählen Sie mindestens ein Modell aus.",
   "You can select up to four models at most.": "Sie können maximal vier Modelle auswählen.",
   "Your friend needs to complete the check-in three times.": "Dein Freund muss die Anmeldung dreimal erledigen.",
