--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -698,6 +698,22 @@
   "Strong language skills": "",
   "Enhanced reasoning, suitable for complex tasks": "",
   "Lightweight general-purpose model with fast response speed": "",
+  "Multimodal, suitable for most tasks": "",
+  "Well-suited for handling daily tasks": "",
+  "Strong writing and coding skills": "",
+  "Multimodal with fast response": "",
+  "Expert in Q&A, lively expression style": "",
+  "Strong writing ability, high stability": "",
+  "Multimodal with enhanced reasoning": "",
+  "Using advanced reasoning": "",
+  "Good at fast coding and analysis": "",
+  "Skilled in writing and generating ideas": "",
+  "Strong general capabilities, stable writing": "",
+  "Strongest in coding, suitable for complex tasks": "",
+  "Deep reasoning enhancement": "",
+  "Enhanced contextual understanding and structural reasoning": "",
+  "Strengthened logical reasoning and knowledge expression": "",
+  "Powerful multimodal capabilities, proficient in graphics, text, and code": "",
   "Please select at least one model.": "",
   "You can select up to four models at most.": "",
   "Your friend needs to complete the check-in three times.": "",
