--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -698,6 +698,22 @@
   "Strong language skills": "Fuerte competencia lingüística",
   "Enhanced reasoning, suitable for complex tasks": "Razonamiento mejorado, adecuado para tareas complejas",
   "Lightweight general-purpose model with fast response speed": "Modelo ligero multipropósito con rápida velocidad de respuesta",
+  "Multimodal, suitable for most tasks": "Multimodal, adecuado para la mayoría de las tareas",
+  "Well-suited for handling daily tasks": "Muy adecuado para manejar tareas diarias",
+  "Strong writing and coding skills": "Fuertes habilidades de escritura y codificación",
+  "Multimodal with fast response": "Multimodal con respuesta rápida",
+  "Expert in Q&A, lively expression style": "Experto en Preguntas y Respuestas, estilo de expresión vivo",
+  "Strong writing ability, high stability": "Gran habilidad de escritura, alta estabilidad",
+  "Multimodal with enhanced reasoning": "Multimodal con razonamiento mejorado",
+  "Using advanced reasoning": "Utilizando razonamiento avanzado",
+  "Good at fast coding and analysis": "Hábil en codificación rápida y análisis",
+  "Skilled in writing and generating ideas": "Hábil en escribir y generar ideas",
+  "Strong general capabilities, stable writing": "Fuertes capacidades generales, escritura estable",
+  "Strongest in coding, suitable for complex tasks": "Más fuerte en codificación, adecuado para tareas complejas",
+  "Deep reasoning enhancement": "Mejora profunda del razonamiento",
+  "Enhanced contextual understanding and structural reasoning": "Comprensión contextual mejorada y razonamiento estructural",
+  "Strengthened logical reasoning and knowledge expression": "Razonamiento lógico fortalecido y expresión de conocimiento",
+  "Powerful multimodal capabilities, proficient in graphics, text, and code": "Potentes capacidades multimodales, proficiente en gráficos, texto y código",
   "Please select at least one model.": "Por favor, seleccione al menos un modelo.",
   "You can select up to four models at most.": "Puede seleccionar hasta cuatro modelos como máximo.",
   "Your friend needs to complete the check-in three times.": "Tu amigo necesita completar el registro tres veces.",
