--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -697,6 +697,22 @@
   "Strong language skills": "Fortes compétences linguistiques",
   "Enhanced reasoning, suitable for complex tasks": "Raisonnement renforcé, approprié pour des tâches complexes",
   "Lightweight general-purpose model with fast response speed": "Modèle généraliste léger avec une vitesse de réponse rapide",
+  "Multimodal, suitable for most tasks": "Multimodal, approprié pour la plupart des tâches",
+  "Well-suited for handling daily tasks": "Très approprié pour gérer les tâches quotidiennes",
+  "Strong writing and coding skills": "Fortes compétences en écriture et en codage",
+  "Multimodal with fast response": "Multimodal avec réponse rapide",
+  "Expert in Q&A, lively expression style": "Expert en Q&A, style d'expression vif",
+  "Strong writing ability, high stability": "Forte capacité d'écriture, haute stabilité",
+  "Multimodal with enhanced reasoning": "Multimodal avec raisonnement amélioré",
+  "Using advanced reasoning": "Utilisant un raisonnement avancé",
+  "Good at fast coding and analysis": "Aptitude à la codage rapide et à l'analyse",
+  "Skilled in writing and generating ideas": "Habile en écriture et en génération d'idées",
+  "Strong general capabilities, stable writing": "Fortes capacités générales, écriture stable",
+  "Strongest in coding, suitable for complex tasks": "Le plus fort en codage, approprié pour les tâches complexes",
+  "Deep reasoning enhancement": "Amélioration approfondie du raisonnement",
+  "Enhanced contextual understanding and structural reasoning": "Compréhension contextuelle améliorée et raisonnement structurel",
+  "Strengthened logical reasoning and knowledge expression": "Raisonnement logique renforcé et expression de connaissance",
+  "Powerful multimodal capabilities, proficient in graphics, text, and code": "Puissantes capacités multimodales, compétent en graphiques, texte et code",
   "Please select at least one model.": "Veuillez sélectionner au moins un modèle.",
   "You can select up to four models at most.": "Vous pouvez sélectionner jusqu'à quatre modèles au maximum.",
   "Your friend needs to complete the check-in three times.": "Ton ami doit effectuer l'enregistrement trois fois.",
