--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -698,6 +698,22 @@
   "Strong language skills": "Kemampuan Bahasa yang Kuat",
   "Enhanced reasoning, suitable for complex tasks": "Penalaran yang ditingkatkan, cocok untuk tugas-tugas kompleks",
   "Lightweight general-purpose model with fast response speed": "Model umum ringan, kecepatan respons cepat",
+  "Multimodal, suitable for most tasks": "Multimodal, cocok untuk sebagian besar tugas",
+  "Well-suited for handling daily tasks": "Sangat cocok untuk menangani tugas harian",
+  "Strong writing and coding skills": "Kemampuan menulis dan pengkodean yang kuat",
+  "Multimodal with fast response": "Multimodal dengan respons cepat",
+  "Expert in Q&A, lively expression style": "Ahli dalam Tanya Jawab, gaya ekspresi yang ceria",
+  "Strong writing ability, high stability": "Kemampuan menulis yang kuat, stabilitas tinggi",
+  "Multimodal with enhanced reasoning": "Multimodal dengan penalaran yang ditingkatkan",
+  "Using advanced reasoning": "Menggunakan penalaran canggih",
+  "Good at fast coding and analysis": "Pandai dalam pengkodean cepat dan analisis",
+  "Skilled in writing and generating ideas": "Terampil dalam menulis dan menghasilkan ide",
+  "Strong general capabilities, stable writing": "Kemampuan umum yang kuat, penulisan yang stabil",
+  "Strongest in coding, suitable for complex tasks": "Paling kuat dalam pengkodean, cocok untuk tugas kompleks",
+  "Deep reasoning enhancement": "Peningkatan penalaran mendalam",
+  "Enhanced contextual understanding and structural reasoning": "Pemahaman kontekstual yang ditingkatkan dan penalaran struktural",
+  "Strengthened logical reasoning and knowledge expression": "Penalaran logis yang diperkuat dan ekspresi pengetahuan",
+  "Powerful multimodal capabilities, proficient in graphics, text, and code": "Kemampuan multimodal yang kuat, mahir dalam grafik, teks, dan kode",
   "Please select at least one model.": "Silakan pilih setidaknya satu model.",
   "You can select up to four models at most.": "Anda dapat memilih hingga empat model terbanyak.",
   "Your friend needs to complete the check-in three times.": "Temanmu perlu menyelesaikan pendaftaran sebanyak tiga kali.",
