--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -698,6 +698,22 @@
   "Strong language skills": "すぐれたげんごのうりょく",
   "Enhanced reasoning, suitable for complex tasks": "強化された推理能力、複雑なタスクに適しています",
   "Lightweight general-purpose model with fast response speed": "軽量汎用モデルで、応答速度が速いです",
+  "Multimodal, suitable for most tasks": "マルチモーダルで、ほとんどのタスクに適しています",
+  "Well-suited for handling daily tasks": "日常的なタスクの処理に適しています",
+  "Strong writing and coding skills": "優れたライティングとコーディング能力",
+  "Multimodal with fast response": "マルチモーダルで高速応答",
+  "Expert in Q&A, lively expression style": "質疑応答に長け、表現スタイルは活発",
+  "Strong writing ability, high stability": "ライティング能力が高く、安定性が高い",
+  "Multimodal with enhanced reasoning": "推論能力が強化されたマルチモーダル",
+  "Using advanced reasoning": "高度な推論を使用",
+  "Good at fast coding and analysis": "高速コーディングと分析に長けている",
+  "Skilled in writing and generating ideas": "ライティングとアイデア生成に熟練",
+  "Strong general capabilities, stable writing": "総合能力が高く、安定したライティング",
+  "Strongest in coding, suitable for complex tasks": "コーディングが最も強く、複雑なタスクに適しています",
+  "Deep reasoning enhancement": "深層推論強化",
+  "Enhanced contextual understanding and structural reasoning": "文脈理解と構造推論の強化",
+  "Strengthened logical reasoning and knowledge expression": "論理的推論と知識表現の強化",
+  "Powerful multimodal capabilities, proficient in graphics, text, and code": "強力なマルチモーダル機能で、グラフィック、テキスト、コードに精通",
   "Please select at least one model.": "少なくとも 1 つのモデルを選択してください。",
   "You can select up to four models at most.": "最大で 4 つのモデルを選択できます。",
   "Your friend needs to complete the check-in three times.": "あなたの友達は 3 回の出席登録を完了する必要があります。",
