--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -698,6 +698,22 @@
   "Strong language skills": "뛰어난 언어 능력",
   "Enhanced reasoning, suitable for complex tasks": "강화된 추론, 복잡한 과제에 적합합니다",
   "Lightweight general-purpose model with fast response speed": "경량 다목적 모델로 응답 속도가 빠릅니다",
+  "Multimodal, suitable for most tasks": "멀티모달, 대부분의 작업에 적합",
+  "Well-suited for handling daily tasks": "일상 작업 처리에 매우 적합",
+  "Strong writing and coding skills": "강력한 글쓰기 및 코딩 능력",
+  "Multimodal with fast response": "빠른 응답을 지원하는 멀티모달",
+  "Expert in Q&A, lively expression style": "Q&A 전문가, 활기찬 표현 스타일",
+  "Strong writing ability, high stability": "강력한 글쓰기 능력, 높은 안정성",
+  "Multimodal with enhanced reasoning": "추론能力이 강화된 멀티모달",
+  "Using advanced reasoning": "고급 추론을 사용함",
+  "Good at fast coding and analysis": "빠른 코딩과 분석에 능함",
+  "Skilled in writing and generating ideas": "글쓰기와 아이디어 생성에 숙련",
+  "Strong general capabilities, stable writing": "강력한 일반 능력, 안정적인 글쓰기",
+  "Strongest in coding, suitable for complex tasks": "코딩 능력 가장 뛰어남, 복잡한 작업에 적합",
+  "Deep reasoning enhancement": "심층 추론 강화",
+  "Enhanced contextual understanding and structural reasoning": "문맥 이해 및 구조적 추론 강화",
+  "Strengthened logical reasoning and knowledge expression": "논리 추론 및 지식 표현 강화",
+  "Powerful multimodal capabilities, proficient in graphics, text, and code": "강력한 멀티모달 능력으로 그래픽, 텍스트, 코드에 능함",
   "Please select at least one model.": "적어도 하나의 모델을 선택하세요.",
   "You can select up to four models at most.": "최대 4개의 모델을 선택할 수 있습니다.",
   "Your friend needs to complete the check-in three times.": "네 친구는 세 번의 출석 체크인을 완료해야 합니다.",
