--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -698,6 +698,22 @@
   "Strong language skills": "Forte habilidade linguística",
   "Enhanced reasoning, suitable for complex tasks": "Raciocínio aprimorado, adequado para tarefas complexas",
   "Lightweight general-purpose model with fast response speed": "Modelo genérico leve com alta velocidade de resposta",
+  "Multimodal, suitable for most tasks": "Multimodal, adequado para a maioria das tarefas",
+  "Well-suited for handling daily tasks": "Muito adequado para lidar com tarefas diárias",
+  "Strong writing and coding skills": "Fortes habilidades de escrita e codificação",
+  "Multimodal with fast response": "Multimodal com resposta rápida",
+  "Expert in Q&A, lively expression style": "Experto em Perguntas e Respostas, estilo de expressão vivo",
+  "Strong writing ability, high stability": "Forte capacidade de escrita, alta estabilidade",
+  "Multimodal with enhanced reasoning": "Multimodal com raciocínio aprimorado",
+  "Using advanced reasoning": "Utilizando raciocínio avançado",
+  "Good at fast coding and analysis": "Hábil em codificação rápida e análise",
+  "Skilled in writing and generating ideas": "Hábil em escrever e gerar ideias",
+  "Strong general capabilities, stable writing": "Fortes capacidades gerais, escrita estável",
+  "Strongest in coding, suitable for complex tasks": "Mais forte em codificação, adequado para tarefas complexas",
+  "Deep reasoning enhancement": "Aprimoramento profundo do raciocínio",
+  "Enhanced contextual understanding and structural reasoning": "Compreensão contextual aprimorada e raciocínio estrutural",
+  "Strengthened logical reasoning and knowledge expression": "Raciocínio lógico fortalecido e expressão de conhecimento",
+  "Powerful multimodal capabilities, proficient in graphics, text, and code": "Potentes capacidades multimodais, proficiente em gráficos, texto e código",
   "Please select at least one model.": "Por favor, selecione pelo menos um modelo.",
   "You can select up to four models at most.": "Você pode selecionar até quatro modelos no máximo.",
   "Your friend needs to complete the check-in three times.": "Seu amigo precisa concluir o check-in três vezes.",
