--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -697,6 +697,22 @@
   "Strong language skills": "Прочные языковые навыки",
   "Enhanced reasoning, suitable for complex tasks": "Укрепенное рассуждение, подходящее для сложных задач",
   "Lightweight general-purpose model with fast response speed": "Легковесная универсальная модель с высокой скоростью отклика",
+  "Multimodal, suitable for most tasks": "Мультимодальный, подходит для большинства задач",
+  "Well-suited for handling daily tasks": "Хорошо подходит для выполнения ежедневных задач",
+  "Strong writing and coding skills": "Сильные навыки письма и программирования",
+  "Multimodal with fast response": "Мультимодальный с быстрым ответом",
+  "Expert in Q&A, lively expression style": "Эксперт в вопросах и ответах, оживленный стиль выражения",
+  "Strong writing ability, high stability": "Сильная навыковая писателя, высокая стабильность",
+  "Multimodal with enhanced reasoning": "Мультимодальный с улучшенной логикой",
+  "Using advanced reasoning": "Использование avançанной логики",
+  "Good at fast coding and analysis": "Хорошо справляется с быстрой программной и аналитической работой",
+  "Skilled in writing and generating ideas": "Опытный в письме и генерации идей",
+  "Strong general capabilities, stable writing": "Сильные общие способности, стабильное письмо",
+  "Strongest in coding, suitable for complex tasks": "Сильнейший в программировании, подходит для komplexных задач",
+  "Deep reasoning enhancement": "Глубокое улучшение логики",
+  "Enhanced contextual understanding and structural reasoning": "Улучшенное контекстное понимание и структурная логика",
+  "Strengthened logical reasoning and knowledge expression": "Усильная логическая мысль и выражение знаний",
+  "Powerful multimodal capabilities, proficient in graphics, text, and code": "Мощные мультимодальные возможности, أ круглосуточно работающий с графикой, текстом и кодом",
   "Please select at least one model.": "Пожалуйста, выберите хотя бы один модель.",
   "You can select up to four models at most.": "Вы можете выбрать до четырех моделей максимум.",
   "Your friend needs to complete the check-in three times.": "Твой друг должен выполнить регистрацию трижды.",
