--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -697,6 +697,22 @@
   "Strong language skills": "ความสามารถภาษาที่แข็งแกร่ง",
   "Enhanced reasoning, suitable for complex tasks": "การให้เหตุผลที่ได้รับการเสริมสร้าง เหมาะสำหรับงานที่ซับซ้อน",
   "Lightweight general-purpose model with fast response speed": "โมเดลอเนกประสงค์น้ำหนักเบาที่ตอบสนองเร็ว",
+  "Multimodal, suitable for most tasks": "หลายโหมด เหมาะกับงานส่วนใหญ่",
+  "Well-suited for handling daily tasks": "เหมาะสำหรับการจัดการงานประจำวัน",
+  "Strong writing and coding skills": "ทักษะการเขียนและเขียนโค้ดแข็งแกร่ง",
+  "Multimodal with fast response": "หลายโหมด พร้อมตอบสนองเร็ว",
+  "Expert in Q&A, lively expression style": "เชี่ยวชาญถามตอบ มีสไตล์การแสดงออกมีชีวิตชีวา",
+  "Strong writing ability, high stability": "ความสามารถในการเขียนดี มีเสถียรภาพสูง",
+  "Multimodal with enhanced reasoning": "หลายโหมด พร้อมความสามารถในการใช้เหตุผลที่พัฒนาขึ้น",
+  "Using advanced reasoning": "ใช้การให้เหตุผลขั้นสูง",
+  "Good at fast coding and analysis": "เก่งในการเขียนโค้ดเร็วและการวิเคราะห์",
+  "Skilled in writing and generating ideas": "มีความเชี่ยวชาญในการเขียนและสร้างสรรค์แนวคิด",
+  "Strong general capabilities, stable writing": "ความสามารถทั่วไปแข็งแกร่ง การเขียนมีเสถียรภาพ",
+  "Strongest in coding, suitable for complex tasks": "เขียนโค้ดเก่งที่สุด เหมาะกับงานที่ซับซ้อน",
+  "Deep reasoning enhancement": "การเสริมสร้างการใช้เหตุผลเชิงลึก",
+  "Enhanced contextual understanding and structural reasoning": "ความเข้าใจบริบทและการใช้เหตุผลเชิงโครงสร้างที่พัฒนาขึ้น",
+  "Strengthened logical reasoning and knowledge expression": "การใช้เหตุผลเชิงตรรกะและการแสดงออกความรู้ที่แข็งแกร่งขึ้น",
+  "Powerful multimodal capabilities, proficient in graphics, text, and code": "ความสามารถหลายโหมดทรงพลัง เชี่ยวชาญทั้งกราฟิก ข้อความ และโค้ด",
   "Please select at least one model.": "กรุณาเลือกแบบจำลองอย่างน้อยหนึ่งแบบ",
   "You can select up to four models at most.": "คุณสามารถเลือกได้สูงสุดสี่แบบจำลอง",
   "Your friend needs to complete the check-in three times.": "เพื่อนของคุณต้องทำการเช็คอินสามครั้ง",
