--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -698,6 +698,22 @@
   "Strong language skills": "Güçlü Dil Becerileri",
   "Enhanced reasoning, suitable for complex tasks": "Güçlendirilmiş mantık, karmaşık görevler için uygundur",
   "Lightweight general-purpose model with fast response speed": "Hafif genel amaçlı model, hızlı yanıt verme kabiliyetine sahiptir",
+  "Multimodal, suitable for most tasks": "Çoklu mod, çoğu görev için uygun",
+  "Well-suited for handling daily tasks": "Günlük görevleri işlemek için ideal",
+  "Strong writing and coding skills": "Güçlü yazma ve kodlama becerileri",
+  "Multimodal with fast response": "Hızlı yanıtlı çoklu mod",
+  "Expert in Q&A, lively expression style": "Soru-cevap uzmanı, canlı ifade tarzı",
+  "Strong writing ability, high stability": "Güçlü yazma yeteneği, yüksek kararlılık",
+  "Multimodal with enhanced reasoning": "Gelişmiş akıl yürütmeli çoklu mod",
+  "Using advanced reasoning": "Gelişmiş akıl yürütme kullanımı",
+  "Good at fast coding and analysis": "Hızlı kodlama ve analizde başarılı",
+  "Skilled in writing and generating ideas": "Yazma ve fikir üretmede yetenekli",
+  "Strong general capabilities, stable writing": "Güçlü genel yetenekler, kararlı yazım",
+  "Strongest in coding, suitable for complex tasks": "Kodlamada en güçlü, karmaşık görevler için uygun",
+  "Deep reasoning enhancement": "Derin akıl yürütme geliştirmesi",
+  "Enhanced contextual understanding and structural reasoning": "Gelişmiş bağlamsal anlayış ve yapısal akıl yürütme",
+  "Strengthened logical reasoning and knowledge expression": "Güçlendirilmiş mantıksal akıl yürütme ve bilgi ifadesi",
+  "Powerful multimodal capabilities, proficient in graphics, text, and code": "Güçlü çoklu mod yetenekleri, grafiklerde, metinde ve kodda yetkin",
   "Please select at least one model.": "Lütfen en az bir model seçin.",
   "You can select up to four models at most.": "En fazla dört model seçebilirsiniz.",
   "Your friend needs to complete the check-in three times.": "Arkadaşın üç kez kayıt yapması gerekiyor.",
