--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -698,6 +698,22 @@
   "Strong language skills": "Khả năng ngôn ngữ mạnh mẽ",
   "Enhanced reasoning, suitable for complex tasks": "Lý luận được tăng cường, phù hợp với các nhiệm vụ phức tạp",
   "Lightweight general-purpose model with fast response speed": "Mô hình đa năng nhẹ với tốc độ phản hồi nhanh",
+  "Multimodal, suitable for most tasks": "Đa phương thức, phù hợp với hầu hết tác vụ",
+  "Well-suited for handling daily tasks": "Phù hợp xử lý công việc hàng ngày",
+  "Strong writing and coding skills": "Mạnh về viết lách và lập trình",
+  "Multimodal with fast response": "Đa phương thức, phản hồi nhanh",
+  "Expert in Q&A, lively expression style": "Chuyên gia hỏi đáp, phong cách diễn đạt sinh động",
+  "Strong writing ability, high stability": "Khả năng viết tốt, ổn định cao",
+  "Multimodal with enhanced reasoning": "Đa phương thức với khả năng suy luận nâng cao",
+  "Using advanced reasoning": "Sử dụng suy luận nâng cao",
+  "Good at fast coding and analysis": "Giỏi lập trình nhanh và phân tích",
+  "Skilled in writing and generating ideas": "Thành thạo viết lách và tạo ý tưởng",
+  "Strong general capabilities, stable writing": "Năng lực tổng thể mạnh, viết ổn định",
+  "Strongest in coding, suitable for complex tasks": "Mạnh nhất về coding, phù hợp tác vụ phức tạp",
+  "Deep reasoning enhancement": "Nâng cao khả năng suy luận sâu",
+  "Enhanced contextual understanding and structural reasoning": "Tăng cường hiểu ngữ cảnh và suy luận cấu trúc",
+  "Strengthened logical reasoning and knowledge expression": "Củng cố suy luận logic và diễn đạt tri thức",
+  "Powerful multimodal capabilities, proficient in graphics, text, and code": "Năng lực đa phương thức mạnh, thành thạo hình ảnh/văn bản/mã code",
   "Please select at least one model.": "Vui lòng chọn ít nhất một mô hình.",
   "You can select up to four models at most.": "Bạn có thể chọn tối đa bốn mô hình.",
   "Your friend needs to complete the check-in three times.": "Bạn của bạn cần hoàn thành việc đăng ký tham dự ba lần.",
