--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -697,6 +697,22 @@
   "Strong language skills": "语言能力强",
   "Enhanced reasoning, suitable for complex tasks": "加强推理，适合复杂任务",
   "Lightweight general-purpose model with fast response speed": "轻量通用模型，响应速度快",
+  "Multimodal, suitable for most tasks": "多模态，适用于大多数任务",
+  "Well-suited for handling daily tasks": "适合处理日常任务",
+  "Strong writing and coding skills": "强写作与编码",
+  "Multimodal with fast response": "多模态，快速响应",
+  "Expert in Q&A, lively expression style": "擅长问答，表达风格活泼",
+  "Strong writing ability, high stability": "写作能力强，稳定性高",
+  "Multimodal with enhanced reasoning": "多模态，推理增强",
+  "Using advanced reasoning": "使用高级推理",
+  "Good at fast coding and analysis": "擅长快速编码和分析",
+  "Skilled in writing and generating ideas": "擅长写作和构思想法",
+  "Strong general capabilities, stable writing": "通用能力强，写作稳定",
+  "Strongest in coding, suitable for complex tasks": "编码最强，适合复杂任务",
+  "Deep reasoning enhancement": "深度推理增强",
+  "Enhanced contextual understanding and structural reasoning": "情境理解与结构推理增强",
+  "Strengthened logical reasoning and knowledge expression": "强化逻辑推理与知识表达",
+  "Powerful multimodal capabilities, proficient in graphics, text, and code": "多模态能力强，图文代码都行",
   "Please select at least one model.": "请至少选择一个模型。",
   "You can select up to four models at most.": "你最多可以选择四个模型。",
   "Your friend needs to complete the check-in three times.": "你的朋友需要完成三次签到。",
