add model more language

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -884,6 +884,9 @@
   "Year": "Jahr",
   "Instant Savings": "Sofortige Einsparungen",
   "Current Status": "Aktueller Status",
+  "Foundation Model": "Basismodell",
+  "Advanced Model": "Fortgeschrittenes Modell",
+  "Top-Level Model": "Spitzenmodell",
   "Accessible Foundation Model": "Zugängliches Basismodell",
   "Accessible Advanced Model": "Zugängliches Fortgeschrittenes Modell",
   "Accessible Top-Level Model": "Zugängliches Spitzenmodell",
