--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -884,6 +884,9 @@
   "Year": "",
   "Instant Savings": "",
   "Current Status": "",
+  "Foundation Model": "",
+  "Advanced Model": "",
+  "Top-Level Model": "",
   "Accessible Foundation Model": "",
   "Accessible Advanced Model": "",
   "Accessible Top-Level Model": "",
