--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -884,6 +884,9 @@
   "Year": "Año",
   "Instant Savings": "Ahorros Inmediatos",
   "Current Status": "Estado Actual",
+  "Foundation Model": "Modelo de Fundación",
+  "Advanced Model": "Modelo Avanzado",
+  "Top-Level Model": "Modelo de Nivel Superior",
   "Accessible Foundation Model": "Modelo de Fundación Accesible",
   "Accessible Advanced Model": "Modelo Avanzado Accesible",
   "Accessible Top-Level Model": "Modelo de Nivel Superior Accesible",
