--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -883,6 +883,9 @@
   "Year": "Année",
   "Instant Savings": "Économies Instantanées",
   "Current Status": "État Actuel",
+  "Foundation Model": "Modèle de Base",
+  "Advanced Model": "Modèle Avancé",
+  "Top-Level Model": "Modèle de Niveau Supérieur",
   "Accessible Foundation Model": "Modèle de Base Accessible",
   "Accessible Advanced Model": "Modèle Avancé Accessible",
   "Accessible Top-Level Model": "Modèle de Niveau Supérieur Accessible",
