--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -884,9 +884,12 @@
   "Year": "Tahun",
   "Instant Savings": "Penhematan Langsung",
   "Current Status": "Status Saat Ini",
+  "Foundation Model": "Model Dasar",
+  "Advanced Model": "Model Tingkat",
+  "Top-Level Model": "Model Tertinggi",
   "Accessible Foundation Model": "Model Dasar Aksesibel",
-  "Accessible Advanced Model": "Model Tingkat Atas Aksesibel",
-  "Accessible Top-Level Model": "Model Tingkat Atas Aksesibel",
+  "Accessible Advanced Model": "Model Tingkat Aksesibel",
+  "Accessible Top-Level Model": "Model Tertinggi Aksesibel",
   "For users who have not created a wallet, the foundation model: {{ num }} times/day": "Bagi pengguna yang belum membuat dompet, model dasar: {{ num }} kali per hari",
   "For users who have created a wallet, the foundation model: {{ num }} times/day": "Bagi pengguna yang telah membuat dompet, model dasar: {{ num }} kali per hari",
   "For users who have completed KYC, the foundation model: {{ num }} times/day": "Bagi pengguna yang telah menyelesaikan KYC, model dasar: {{ num }} kali per hari",
