--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -884,6 +884,9 @@
   "Year": "年",
   "Instant Savings": "即時節約",
   "Current Status": "現在の状態",
+  "Foundation Model": "ファウンデーションモデル",
+  "Advanced Model": "アドバンスドモデル",
+  "Top-Level Model": "トップレベルモデル",
   "Accessible Foundation Model": "アクセシブルファウンデーションモデル",
   "Accessible Advanced Model": "アクセシブル高度モデル",
   "Accessible Top-Level Model": "アクセシブルトップレベルモデル",
