--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -884,6 +884,9 @@
   "Year": "년",
   "Instant Savings": "즉시 절약",
   "Current Status": "현재 상태",
+  "Foundation Model": "기반 모델",
+  "Advanced Model": "고급 모델",
+  "Top-Level Model": "최상위 모델",
   "Accessible Foundation Model": "액세스 가능한 기저 모델",
   "Accessible Advanced Model": "액세스 가능한 고급 모델",
   "Accessible Top-Level Model": "액세스 가능한 최상위 모델",
