--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -884,6 +884,9 @@
   "Year": "Ano",
   "Instant Savings": "Economias Imediatas",
   "Current Status": "Status Atual",
+  "Foundation Model": "Modelo de Fundação",
+  "Advanced Model": "Modelo Avançado",
+  "Top-Level Model": "Modelo de Nível Top",
   "Accessible Foundation Model": "Modelo de Fundação Acessível",
   "Accessible Advanced Model": "Modelo Avançado Acessível",
   "Accessible Top-Level Model": "Modelo de Nível Top Acessível",
