--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -883,6 +883,9 @@
   "Year": "Год",
   "Instant Savings": "Мгновенные Экономии",
   "Current Status": "Текущий статус",
+  "Foundation Model": "Доступная фундаментальная",
+  "Advanced Model": "Доступная продвинутая",
+  "Top-Level Model": "Доступная верхнего уровня",
   "Accessible Foundation Model": "Доступная фундаментальная модель",
   "Accessible Advanced Model": "Доступная продвинутая модель",
   "Accessible Top-Level Model": "Доступная верхнего уровня модель",
