--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -883,6 +883,9 @@
   "Year": "ปี",
   "Instant Savings": "การประหยัดทันที",
   "Current Status": "สถานะปัจจุบัน",
+  "Foundation Model": "โมเดลพื้นฐาน",  
+  "Advanced Model": "โมเดลขั้นสูง",  
+  "Top-Level Model": "โมเดลระดับสูงสุด",
   "Accessible Foundation Model": "รุ่นแบบพื้นฐานที่เข้าถึงได้",
   "Accessible Advanced Model": "รุ่นแบบที่มีอัตราการขั้นสูงและเข้าถึงได้",
   "Accessible Top-Level Model": "รุ่นแบบระดับสูงสุดที่เข้าถึงได้",
