--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -884,6 +884,9 @@
   "Year": "Yıl",
   "Instant Savings": "Anlık Tasarruflar",
   "Current Status": "Geçerli Durum",
+  "Foundation Model": "Temel Model",
+  "Advanced Model": "Gelişmiş Model",
+  "Top-Level Model": "En Üst Seviye Model",
   "Accessible Foundation Model": "Erişilebilir Temel Model",
   "Accessible Advanced Model": "Erişilebilir Gelişmiş Model",
   "Accessible Top-Level Model": "Erişilebilir En Üst Seviye Model",
