--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -873,6 +873,9 @@
   "Year": "Năm",
   "Instant Savings": "Tiết Kiệm Ngay Lập Tức",
   "Current Status": "Trạng Thái Hiện Tại",
+  "Foundation Model": "Mô hình nền tảng",
+  "Advanced Model": "Mô hình nâng cao", 
+  "Top-Level Model": "Mô hình đỉnh cao",
   "Accessible Foundation Model": "Mô hình Cơ sở Có Thể Truy Cập",
   "Accessible Advanced Model": "Mô hình Cao Cấp Có Thể Truy Cập",
   "Accessible Top-Level Model": "Mô hình Cấp Top Có Thể Truy Cập",
