--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -883,6 +883,9 @@
   "Year": "年",
   "Instant Savings": "立省",
   "Current Status": "当前状态",
+  "Foundation Model": "基础模型",
+  "Advanced Model": "高级模型",
+  "Top-Level Model": "顶级模型",
   "Accessible Foundation Model": "可访问基础模型",
   "Accessible Advanced Model": "可访问高级模型",
   "Accessible Top-Level Model": "可访问顶级模型",
