update track bug

--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -574,6 +574,7 @@
   "You": "당신",
   "You can copy the private key below:": "아래의 개인 키를 복사할 수 있습니다:",
   "You can copy the website below:": "아래 웹사이트를 복사할 수 있습니다:",
+  "Copy the link and open it in a browser": "링크 복사 후 브라우저에서 열기",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "하루에 최대 10명의 친구를 초대할 수 있습니다. 하루에 최대 10,000 DGC의 보상을 받을 수 있습니다.",
   "You have no archived conversations.": "아카이브된 대화가 없습니다.",
   "You have shared this chat": "이 채팅을 공유했습니다.",
@@ -614,10 +615,13 @@
   "Share to Obtain DGC": "DGC를 얻기 위해 공유하기",
   "Buy": "구매",
   "Node Sale": "노드 판매",
+  "Purchase DGC": "DGC 구매",
   "Transactions": "거래",
   "Authed KYC": "인증된 KYC",
   "Complete KYC": "완료된 KYC",
   "Connect Wallet": "지갑 연결",
+  "Wallet": "지갑",
+  "Claim Rewards": "보상 받기",
   "Create Wallet": "지갑 생성",
   "Open Wallet": "지갑 열기",
   "Set as default": "기본으로 설정",
@@ -806,7 +810,7 @@
   "The contract address of DGC": "DGC 계약 주소",
   "Instructions": "설명",
   "If the problem remains unresolved, please join the Telegram group and follow us on X": "문제가 해결되지 않으면 Telegram 그룹에 가입하고 X에서 팔로우하세요",
-  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "어떤 거래 플랫폼의 메인넷에 출시되기 전에, DGC 토큰은 포인트로 표시됩니다. DGC가 공식적으로 출시될 때, 이러한 포인트는 1:1 비율로 변환됩니다. DGC 팀은 이 전환이 원활하게 이루어지고 이 정책의 남용을 방지할 것입니다.",
+  "Before the mainnet launch on any trading platform, DGC tokens are designated as points. When DGC is officially launched, these points will be converted at a predetermined ratio. The DGC team will ensure a smooth conversion process and prevent any misuse of this policy.": "거래 플랫폼에서 메인넷이 출시되기 전에는 DGC 토큰이 포인트로 지정됩니다. DGC가 공식 출시되면, 이 포인트는 미리 정해진 비율로 전환됩니다. DGC 팀은 원활한 전환 과정을 보장하고 이 정책의 남용을 방지할 것입니다.",
   "About DBC": "DBC에 관하여",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "딥브레인체인은 세계 최초의 AI 공개 체인입니다. 그 자체 토큰인 DBC는 이 프로젝트에서 가스 요금으로 사용됩니다. 모든 DGC 거래는 일정량의 명목상의 DBC를 요구합니다.",
   "Download DeGPT APP": "DeGPT 앱을 다운로드합니다.",
