--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -573,6 +573,7 @@
   "You": "Вы",
   "You can copy the private key below:": "Вы можете скопировать приватный ключ ниже:",
   "You can copy the website below:": "Вы можете скопировать веб-сайт ниже:",
+  "Copy the link and open it in a browser": "Скопируйте ссылку и откройте в браузере",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Вы можете приглашать до 10 друзей в день, с максимальным вознаграждением 10,000 DGC в день.",
   "You have no archived conversations.": "У вас нет архивированных чатов.",
   "You have shared this chat": "Вы поделились этим чатом",
@@ -613,10 +614,13 @@
   "Share to Obtain DGC": "Поделиться для получения DGC",
   "Buy": "Купить",
   "Node Sale": "Продажа узла",
+  "Purchase DGC": "Купить DGC",
   "Transactions": "Транзакции",
   "Authed KYC": "Авторизованный KYC",
   "Complete KYC": "Завершить KYC",
   "Connect Wallet": "Подключить кошелька",
+  "Wallet": "Кошелёк",
+  "Claim Rewards": "Получить вознаграждение",
   "Create Wallet": "Создать кошелек",
   "Open Wallet": "Открыть кошелек",
   "Set as default": "Установить по умолчанию",
@@ -805,7 +809,7 @@
   "The contract address of DGC": "Адрес контракта DGC",
   "Instructions": "Инструкция",
   "If the problem remains unresolved, please join the Telegram group and follow us on X": "Если проблема остается нерешенной, пожалуйста, присоединяйтесь к группе в Telegram и следите за нами в X",
-  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "До запуска на основной сети любой торговой платформы токены DGC помечаются как очки. Эти очки будут преобразованы в соотношении 1:1, когда DGC официально запустится. Команда DGC 确保这种转换顺利进行并防止对这项政策的任何滥用。",
+  "Before the mainnet launch on any trading platform, DGC tokens are designated as points. When DGC is officially launched, these points will be converted at a predetermined ratio. The DGC team will ensure a smooth conversion process and prevent any misuse of this policy.": "Перед запуском основной сети на любой торговой платформе токены DGC обозначаются как баллы. Когда DGC будет официально запущен, эти баллы будут конвертированы по заранее определенному курсу. Команда DGC обеспечит плавный процесс конвертации и предотвратит любое злоупотребление данной политикой.",
   "About DBC": "О DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain - это первая публичная цепь ИИ в мире. Его собственный токен, DBC, используется в качестве комиссии за газ в этом проекте. Любая транзакция DGC требует определенного количества номинальных DBC.",
   "Download DeGPT APP": "Скачать приложение DeGPT",
