--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -574,6 +574,7 @@
   "You": "Sie",
   "You can copy the private key below:": "Sie können den privaten Schlüssel unten kopieren:",
   "You can copy the website below:": "Sie können die unten stehende Website kopieren:",
+  "Copy the link and open it in a browser": "Link kopieren und im Browser öffnen",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Sie können bis zu 10 Freunde pro Tag einladen, mit einer maximalen Belohnung von 10,000 DGC pro Tag.",
   "You have no archived conversations.": "Sie haben keine archivierten Gespräche.",
   "You have shared this chat": "Sie haben diesen Chat geteilt",
@@ -614,10 +615,13 @@
   "Share to Obtain DGC": "Teilen, um DGC zu erhalten",
   "Buy": "Kaufen",
   "Node Sale": "Verkauf von Knoten",
+  "Purchase DGC": "DGC kaufen",
   "Transactions": "Transaktionen",
   "Authed KYC": "Autorisiertes KYC",
   "Complete KYC": "KYC abschließen",
   "Connect Wallet": "Wallet verbinden",
+  "Wallet": "Geldbörse",
+  "Claim Rewards": "Belohnungen abholen",
   "Create Wallet": "Wallet erstellen",
   "Open Wallet": "Wallet öffnen",
   "Set as default": "Als Standard setzen",
@@ -806,7 +810,7 @@
   "The contract address of DGC": "Die Vertragsadresse von DGC",
   "Instructions": "Anweisungen",
   "If the problem remains unresolved, please join the Telegram group and follow us on X": "Wenn das Problem weiterhin ungelöst bleibt, bitte treten Sie der Telegram-Gruppe bei und folgen Sie uns auf X",
-  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Bevor DGC auf dem Hauptnetz irgendeiner Handelsplattform gestartet wird, werden die DGC-Token als Punkte markiert. Diese Punkte werden im Verhältnis 1:1 konvertiert, wenn DGC offiziell gestartet wird. Das DGC-Team wird sicherstellen, dass dieser Übergang reibungslos verläuft und jegliche Missbrauch dieser Politik verhindern.",
+  "Before the mainnet launch on any trading platform, DGC tokens are designated as points. When DGC is officially launched, these points will be converted at a predetermined ratio. The DGC team will ensure a smooth conversion process and prevent any misuse of this policy.": "Bevor das Mainnet auf einer Handelsplattform gestartet wird, werden DGC-Token als Punkte gekennzeichnet. Wenn DGC offiziell gestartet wird, werden diese Punkte in einem festgelegten Verhältnis umgetauscht. Das DGC-Team wird einen reibungslosen Umtauschprozess sicherstellen und jeden Missbrauch dieser Regelung verhindern.",
   "About DBC": "Über DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain ist die weltweit erste KI-Öffentliche Kette. Sein eigenes Token, DBC, wird in diesem Projekt als Gasgebühr genutzt. Jede DGC-Transaktion erfordert eine bestimmte Menge an nominalen DBCs.",
   "Download DeGPT APP": "DeGPT-APP herunterladen",
