--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -574,6 +574,7 @@
   "You": "",
   "You can copy the private key below:": "",
   "You can copy the website below:": "",
+  "Copy the link and open it in a browser": "",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "",
   "You have no archived conversations.": "",
   "You have shared this chat": "",
@@ -614,10 +615,13 @@
   "Share to Obtain DGC": "",
   "Buy": "",
   "Node Sale": "",
+  "Purchase DGC": "",
   "Transactions": "",
   "Authed KYC": "",
   "Complete KYC": "",
   "Connect Wallet": "",
+  "Wallet": "",
+  "Claim Rewards": "",
   "Create Wallet": "",
   "Open Wallet": "",
   "Set as default": "",
@@ -806,7 +810,7 @@
   "The contract address of DGC": "",
   "Instructions": "",
   "If the problem remains unresolved, please join the Telegram group and follow us on X": "",
-  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "",
+  "Before the mainnet launch on any trading platform, DGC tokens are designated as points. When DGC is officially launched, these points will be converted at a predetermined ratio. The DGC team will ensure a smooth conversion process and prevent any misuse of this policy.": "",
   "About DBC": "",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "",
   "Download DeGPT APP": "",
