--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -574,6 +574,7 @@
   "You": "Tú",
   "You can copy the private key below:": "Puedes copiar la llave privada de abajo:",
   "You can copy the website below:": "Puedes copiar el sitio web de abajo:",
+  "Copy the link and open it in a browser": "Copiar el enlace y abrirlo en un navegador",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Puedes invitar hasta 10 amigos por día, con una recompensa máxima de 10,000 DGC por día.",
   "You have no archived conversations.": "No tienes conversaciones archivadas.",
   "You have shared this chat": "Has compartido este chat",
@@ -614,10 +615,13 @@
   "Share to Obtain DGC": "Compartir para obtener DGC",
   "Buy": "Comprar",
   "Node Sale": "Venta de Nodos",
+  "Purchase DGC": "Comprar DGC",
   "Transactions": "Transacciones",
   "Authed KYC": "KYC Autorizado",
   "Complete KYC": "Completar KYC",
   "Connect Wallet": "Conectar billetera",
+  "Wallet": "Monedero",
+  "Claim Rewards": "Reclamar recompensas",
   "Create Wallet": "Crear billetera",
   "Open Wallet": "Abrir billetera",
   "Set as default": "Establecer como predeterminado",
@@ -806,7 +810,7 @@
   "The contract address of DGC": "Dirección del contrato de DGC",
   "Instructions": "Instrucciones",
   "If the problem remains unresolved, please join the Telegram group and follow us on X": "Si el problema sigue sin resolverse, únase al grupo de Telegram y síganos en X",
-  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Antes de lanzarse en la red principal de cualquier plataforma de trading, las fichas DGC se marcan como puntos. Estos puntos se convertirán en una proporción de 1:1 cuando DGC se lance oficialmente. El equipo de DGC se asegurará de que esta transición se realice sin problemas y evitará cualquier abuso de esta política.",
+  "Before the mainnet launch on any trading platform, DGC tokens are designated as points. When DGC is officially launched, these points will be converted at a predetermined ratio. The DGC team will ensure a smooth conversion process and prevent any misuse of this policy.": "Antes del lanzamiento de la red principal en cualquier plataforma de negociación, los tokens DGC se designan como puntos. Cuando DGC se lance oficialmente, estos puntos se convertirán en una proporción predeterminada. El equipo de DGC garantizará un proceso de conversión fluido y evitará cualquier uso indebido de esta política.",
   "About DBC": "Acerca de DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain es la primera cadena pública de IA del mundo. Su token nativo, DBC, se utiliza como tarifa de gas en este proyecto. Cualquier transacción DGC requiere una cierta cantidad de DBCs nominales.",
   "Download DeGPT APP": "Descargar la aplicación DeGPT",
