--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -573,6 +573,7 @@
   "You": "Vous",
   "You can copy the private key below:": "Vous pouvez copier la clé privée ci-dessous:",
   "You can copy the website below:": "Vous pouvez copier le site web ci-dessous:",
+  "Copy the link and open it in a browser": "Copier le lien et l'ouvrir dans un navigateur",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Vous pouvez inviter jusqu'à 10 amis par jour, avec une récompense maximale de 10,000 DGC par day.",
   "You have no archived conversations.": "Vous n'avez pas de conversations archivées.",
   "You have shared this chat": "Vous avez partagé cette conversation",
@@ -613,10 +614,13 @@
   "Share to Obtain DGC": "Partager pour obtenir DGC",
   "Buy": "Acheter",
   "Node Sale": "Vente de Nœuds",
+  "Purchase DGC": "Acheter DGC",
   "Transactions": "Transactions",
   "Authed KYC": "KYC autorisé",
   "Complete KYC": "Terminer le KYC",
   "Connect Wallet": "Connecter le portefeuille",
+  "Wallet": "Portefeuille",
+  "Claim Rewards": "Réclamer les récompenses",
   "Create Wallet": "Créer le portefeuille",
   "Open Wallet": "Ouvrir le portefeuille",
   "Set as default": "Définir par défaut",
@@ -805,7 +809,7 @@
   "The contract address of DGC": "Adresse du contrat de DGC",
   "Instructions": "Instructions",
   "If the problem remains unresolved, please join the Telegram group and follow us on X": "Si le problème reste non résolu, veuillez rejoindre le groupe Telegram et nous suivre sur X",
-  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Avant le lancement sur le réseau principal de toute plateforme de trading, les jetons DGC sont marqués en points. Ces points seront convertis au ratio 1:1 lorsque DGC sera lancé officiellement. L'équipe DGC veillera à ce que cette transition se fasse en douceur et préviendra tout abus de cette politique.",
+  "Before the mainnet launch on any trading platform, DGC tokens are designated as points. When DGC is officially launched, these points will be converted at a predetermined ratio. The DGC team will ensure a smooth conversion process and prevent any misuse of this policy.": "Avant le lancement du mainnet sur toute plateforme d'échange, les jetons DGC sont désignés comme des points. Lorsque DGC sera officiellement lancé, ces points seront convertis selon un ratio prédéterminé. L'équipe DGC veillera à ce que le processus de conversion se déroule sans heurts et empêchera toute utilisation abusive de cette politique.",
   "About DBC": "À propos de DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain est la première chaîne publique d'IA au monde. Son jeton natif, DBC, est utilisé comme frais de gaz dans ce projet. Toutes les transactions DGC nécessitent une certaine quantité de DBC nominaux.",
   "Download DeGPT APP": "Télécharger l'application DeGPT",
