--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -574,6 +574,7 @@
   "You": "Anda",
   "You can copy the private key below:": "Anda dapat salin kunci pribadi di bawah:",
   "You can copy the website below:": "Anda dapat menyalin situs web di bawah ini:",
+  "Copy the link and open it in a browser": "Salin tautan dan buka di browser",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Anda dapat mengundang hingga 10 teman per hari, dengan hadiah maksimum 10,000 DGC per hari.",
   "You have no archived conversations.": "Anda tidak memiliki obrolan yang diarsipkan.",
   "You have shared this chat": "Anda telah berbagi obrolan ini",
@@ -614,10 +615,13 @@
   "Share to Obtain DGC": "Bagikan untuk Mendapatkan DGC",
   "Buy": "Beli",
   "Node Sale": "Penjualan Node",
+  "Purchase DGC": "Beli DGC",
   "Transactions": "Transaksi",
   "Authed KYC": "KYC yang Diotorisasi",
   "Complete KYC": "Selesai KYC",
   "Connect Wallet": "Hubungkan Dompet",
+  "Wallet": "Dompet",
+  "Claim Rewards": "Klaim Hadiah",
   "Create Wallet": "Buat Dompet",
   "Open Wallet": "Buka Dompet",
   "Set as default": "Atur sebagai Default",
@@ -806,7 +810,7 @@
   "The contract address of DGC": "Alamat Kontrak DGC",
   "Instructions": "Petunjuk",
   "If the problem remains unresolved, please join the Telegram group and follow us on X": "Jika masalah tetap tidak terpecahkan, silakan gabung ke grup Telegram dan ikuti kami di X",
-  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Sebelum diluncurkan pada mainnet dari platform perdagangan apapun, token DGC ditandai sebagai poin. Poin-poin ini akan dikonversi dengan rasio 1:1 ketika DGC secara resmi diluncurkan. Tim DGC akan memastikan bahwa transisi ini berjalan lancar dan mencegah penyalahgunaan kebijakan ini.",
+  "Before the mainnet launch on any trading platform, DGC tokens are designated as points. When DGC is officially launched, these points will be converted at a predetermined ratio. The DGC team will ensure a smooth conversion process and prevent any misuse of this policy.": "Sebelum peluncuran mainnet di platform perdagangan apa pun, token DGC ditetapkan sebagai poin. Ketika DGC diluncurkan secara resmi, poin-poin ini akan dikonversi dengan rasio yang telah ditentukan. Tim DGC akan memastikan proses konversi berjalan lancar dan mencegah penyalahgunaan kebijakan ini.",
   "About DBC": "Tentang DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain adalah rantai publik AI pertama di dunia. Token aslinya, DBC, digunakan sebagai biaya gas dalam proyek ini. Setiap transaksi DGC memerlukan sejumlah DBC nominal tertentu.",
   "Download DeGPT APP": "Unduh Aplikasi DeGPT",
