--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -576,6 +576,7 @@
   "You": "あなた；君；お前",
   "You can copy the private key below:": "下の秘密鍵をコピーできます：",
   "You can copy the website below:": "下記のウェブサイトをコピーできます:",
+  "Copy the link and open it in a browser": "リンクをコピーしてブラウザで開く",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "あなたは 1 日に最大 10 人の友人を招待できます。1 日の最大報酬は 10,000 DGC です。",
   "You have no archived conversations.": "あなたはアーカイブされた会話を持っていません。",
   "You have shared this chat": "あなたはこのチャットを共有しました。",
@@ -616,10 +617,13 @@
   "Share to Obtain DGC": "DGC を取得するために共有",
   "Buy": "購入",
   "Node Sale": "ノード販売",
+  "Purchase DGC": "DGCを購入",
   "Transactions": "取引履歴",
   "Authed KYC": "認証済み KYC",
   "Complete KYC": "KYC を完了する",
   "Connect Wallet": "ウォレットを接続する",
+  "Wallet": "ウォレット",
+  "Claim Rewards": "報酬を受け取る",
   "Create Wallet": "ウォレットを作成する",
   "Open Wallet": "ウォレットを開く",
   "Set as default": "デフォルトに設定",
@@ -806,7 +810,7 @@
   "The contract address of DGC": "DGC のコントラクトアドレス",
   "Instructions": "説明",
   "If the problem remains unresolved, please join the Telegram group and follow us on X": "問題が解決されない場合は、Telegram グループに参加し、X で私たちをフォローしてください",
-  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "どの取引プラットフォームのメインネットに立ち上げる前に、DGC トークンはポイントとしてマークされます。DGC が正式に立ち上げられるとき、これらのポイントは 1:1 の比率で変換されます。DGC チームは、この移行がスムーズに行われ、このポリシーの乱用を防ぐように確認します。",
+  "Before the mainnet launch on any trading platform, DGC tokens are designated as points. When DGC is officially launched, these points will be converted at a predetermined ratio. The DGC team will ensure a smooth conversion process and prevent any misuse of this policy.": "取引プラットフォームでのメインネットローンチ前に、DGCトークンはポイントとして指定されます。DGCが正式にローンチされると、これらのポイントはあらかじめ決められた比率で変換されます。DGCチームは、変換プロセスを円滑に進めるとともに、このポリシーの悪用を防止します。",
   "About DBC": "DBC について",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "ディープブレインチェインは世界初の AI パブリックチェインです。そのネイティブトークンである DBC は、このプロジェクトでガス料金として使われます。どの DGC 取引も一定量の名目上の DBC を必要とします。",
   "Download DeGPT APP": "DeGPT アプリをダウンロードする",
