--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -574,6 +574,7 @@
   "You": "Você",
   "You can copy the private key below:": "Você pode copiar a chave privada abaixo:",
   "You can copy the website below:": "Você pode copiar o site da web abaixo:",
+  "Copy the link and open it in a browser": "Copiar o link e abrir no navegador",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Você pode convidar até 10 amigos por dia, com uma recompensa máxima de 10,000 DGC por dia.",
   "You have no archived conversations.": "Você não tem conversas arquivadas.",
   "You have shared this chat": "Você compartilhou este chat",
@@ -614,10 +615,13 @@
   "Share to Obtain DGC": "Compartilhar para obter DGC",
   "Buy": "Comprar",
   "Node Sale": "Venda de Nó",
+  "Purchase DGC": "Comprar DGC",
   "Transactions": "Transações",
   "Authed KYC": "KYC autorizado",
   "Complete KYC": "Completar o KYC",
   "Connect Wallet": "Conectar a carteira",
+  "Wallet": "Carteira",
+  "Claim Rewards": "Resgatar Recompensas",
   "Create Wallet": "Criar a carteira",
   "Open Wallet": "Abrir a carteira",
   "Set as default": "Definir como padrão",
@@ -806,7 +810,7 @@
   "The contract address of DGC": "Endereço do contrato de DGC",
   "Instructions": "Instruções",
   "If the problem remains unresolved, please join the Telegram group and follow us on X": "Se o problema permanecer sem solução, junte-se ao grupo do Telegram e siga-nos no X",
-  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Antes do lançamento na rede principal de qualquer plataforma de negociação, as fichas DGC são marcadas como pontos. Esses pontos serão convertidos na proporção 1:1 quando o DGC for lançado oficialmente. A equipe do DGC vai garantir que essa transição ocorra sem problemas e evitar qualquer abuso dessa política.",
+  "Before the mainnet launch on any trading platform, DGC tokens are designated as points. When DGC is officially launched, these points will be converted at a predetermined ratio. The DGC team will ensure a smooth conversion process and prevent any misuse of this policy.": "Antes do lançamento da mainnet em qualquer plataforma de negociação, os tokens DGC são designados como pontos. Quando o DGC for lançado oficialmente, esses pontos serão convertidos em uma proporção predeterminada. A equipe da DGC garantirá um processo de conversão tranquilo e evitará qualquer uso indevido desta política.",
   "About DBC": "Sobre DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "A DeepBrainChain é a primeira cadeia pública de IA do mundo. Seu token nativo, DBC, é usado como taxa de gás neste projeto. Todas as transações DGC requerem uma certa quantidade de DBCs nominais.",
   "Download DeGPT APP": "Baixar o aplicativo DeGPT",
