--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -573,6 +573,7 @@
   "You": "คุณ",
   "You can copy the private key below:": "คุณสามารถคัดลอกคีย์ส่วนตัวด้านล่าง:",
   "You can copy the website below:": "คุณสามารถคัดลอกเว็บไซต์ด้านล่างได้:",
+  "Copy the link and open it in a browser": "คัดลอกลิงก์แล้วเปิดในเบราว์เซอร์",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "คุณสามารถเชิญเพื่อนได้ถึง 10 คนต่อวัน, มีรางวัลสูงสุด 10,000 DGC ต่อวัน.",
   "You have no archived conversations.": "คุณไม่มีแชทที่เก็บไว้",
   "You have shared this chat": "คุณได้แชร์แชทนี้",
@@ -613,10 +614,13 @@
   "Share to Obtain DGC": "แชร์เพื่อรับ DGC",
   "Buy": "ซื้อ",
   "Node Sale": "การขายโหนด",
+  "Purchase DGC": "ซื้อ DGC",
   "Transactions": "ธุรกรรม",
   "Authed KYC": "KYC ที่ได้รับการยืนยัน",
   "Complete KYC": "KYC เสร็จสมบูรณ์",
   "Connect Wallet": "เชื่อมต่อกระเป๋าเงิน",
+  "Wallet": "กระเป๋าเงิน",
+  "Claim Rewards": "รับรางวัล",
   "Create Wallet": "สร้างกระเป๋าเงิน",
   "Open Wallet": "เปิดกระเป๋าเงิน",
   "Set as default": "ตั้งเป็นค่าเริ่มต้น",
@@ -805,7 +809,7 @@
   "The contract address of DGC": "ที่อยู่สัญญาของ DGC",
   "Instructions": "คำแนะนำ",
   "If the problem remains unresolved, please join the Telegram group and follow us on X": "หากปัญหายังคงไม่ได้รับการแก้ไข โปรดเข้าร่วมกลุ่ม Telegram และติดตามเราใน X",
-  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "ก่อนการเปิดตัวบนโครงการหลักของแพลตฟอร์มการซื้อขายใด ๆ, โทเค็น DGC จะถูกกำหนดเป็นแต้ม. เหตุการณ์เหล่านี้จะถูกแปลงในอัตราส่วน 1:1 เมื่อ DGC เปิดตัวอย่างเป็นทางการ. ทีม DGC จะรับประกันว่าการเปลี่ยนแปลงนี้จะดำเนินต่อไปอย่างราบรื่นและป้องกันการประพฤติตัวอย่างไม่เหมาะสมของนโยบายนี้.",
+  "Before the mainnet launch on any trading platform, DGC tokens are designated as points. When DGC is officially launched, these points will be converted at a predetermined ratio. The DGC team will ensure a smooth conversion process and prevent any misuse of this policy.": "ก่อนที่จะเปิดตัว Mainnet บนแพลตฟอร์มซื้อขายใดๆ โทเคน DGC จะถูกกำหนดเป็นคะแนน เมื่อ DGC เปิดตัวอย่างเป็นทางการ คะแนนเหล่านี้จะถูกแปลงตามอัตราส่วนที่กำหนดไว้ล่วงหน้า ทีม DGC จะทำให้กระบวนการแปลงเป็นไปอย่างราบรื่นและป้องกันการละเมิดนโยบายนี้",
   "About DBC": "เกี่ยวกับ DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain เป็นโครงการประชาชน AI แรกในโลก. โทเค็นดั้งเดิมของมันคือ DBC ซึ่งถูกใช้เป็นค่าธรรมเนียมแก๊สในโครงการนี้. การทำธุรกรรม DGC ใด ๆ จะต้องมี DBC แบบมีชื่อเรียกจำนวนหนึ่ง.",
   "Download DeGPT APP": "ดาวน์โหลดแอป DeGPT",
