--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -574,6 +574,7 @@
   "You": "Sen",
   "You can copy the private key below:": "Aşağıdaki özel anahtarı kopyalayabilirsiniz:",
   "You can copy the website below:": "Aşağıdaki web sitesini kopyalayabilirsiniz:",
+  "Copy the link and open it in a browser": "Bağlantıyı kopyala ve tarayıcıda aç",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Günde en fazla 10 arkadaşınızı davet edebilirsiniz, günde en fazla 10,000 DGC ödülü olabilir.",
   "You have no archived conversations.": "Arşivlenmiş sohbetleriniz yok.",
   "You have shared this chat": "Bu sohbeti paylaşmışsınız",
@@ -614,10 +615,13 @@
   "Share to Obtain DGC": "DGC Almak için Paylaş",
   "Buy": "Satın Al",
   "Node Sale": "Düğüm Satışı",
+  "Purchase DGC": "DGC Satın Al",
   "Transactions": "İşlemler",
   "Authed KYC": "Kimlik Doğrulama Onaylı",
   "Complete KYC": "Kimlik Doğrulamasını Tamamla",
   "Connect Wallet": "Cüzdanı Bağla",
+  "Wallet": "Cüzdan",
+  "Claim Rewards": "Ödülleri Al",
   "Create Wallet": "Cüzdan Oluştur",
   "Open Wallet": "Cüzdanı Aç",
   "Set as default": "Varsayılan Olarak Ayarla",
@@ -806,7 +810,7 @@
   "The contract address of DGC": "DGC'nin sözleşme adresi",
   "Instructions": "Talimatlar",
   "If the problem remains unresolved, please join the Telegram group and follow us on X": "Sorun çözülmezse, Telegram grubuna katılın ve X'de bizi takip edin",
-  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Herhangi bir ticaret platformunun ana ağına (mainnet) başlamadan önce, DGC tokenleri puan olarak işaretlenir. DGC resmi olarak başladığında, bu puanlar 1:1 oranında dönüştürülür. DGC takımının bu geçişin sorunsuz geçtiğinden ve bu politikanın herhangi bir kötüye kullanımından emin olması gerekir.",
+  "Before the mainnet launch on any trading platform, DGC tokens are designated as points. When DGC is officially launched, these points will be converted at a predetermined ratio. The DGC team will ensure a smooth conversion process and prevent any misuse of this policy.": "Herhangi bir ticaret platformunda mainnet başlatılmadan önce, DGC token'ları puan olarak işaretlenir. DGC resmi olarak başlatıldığında, bu puanlar önceden belirlenmiş bir oranda dönüştürülecektir. DGC ekibi, sorunsuz bir dönüşüm süreci sağlayacak ve bu politikanın kötüye kullanılmasını önleyecektir.",
   "About DBC": "DBC Hakkında",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain, dünyanın ilk yapay zeka (AI) açık zinciridir. İlgili proje için, yerel tokenı olan DBC, gaz ücreti olarak kullanılır. Herhangi bir DGC işlemi belirli bir miktarda nominal DBC'ye ihtiyaç duyar.",
   "Download DeGPT APP": "DeGPT uygulamasını indirin",
