--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -574,6 +574,7 @@
   "You": "Bạn",
   "You can copy the private key below:": "Bạn có thể sao chép khóa riêng bên dưới:",
   "You can copy the website below:": "Bạn có thể sao chép trang web bên dưới:",
+  "Copy the link and open it in a browser": "Sao chép liên kết và mở trong trình duyệt",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "Bạn có thể mời tới 10 bạn mỗi ngày, với phần thưởng tối đa là 10,000 DGC mỗi ngày.",
   "You have no archived conversations.": "Bạn không có các cuộc trò chuyện đã lưu trữ.",
   "You have shared this chat": "Bạn đã chia sẻ cuộc trò chuyện này",
@@ -614,10 +615,13 @@
   "Share to Obtain DGC": "Chia sẻ để nhận DGC",
   "Buy": "Mua",
   "Node Sale": "Bán Node",
+  "Purchase DGC": "Mua DGC",
   "Transactions": "Giao dịch",
   "Authed KYC": "KYC đã được xác thực",
   "Complete KYC": "Hoàn thành KYC",
   "Connect Wallet": "Kết nối ví",
+  "Wallet": "Ví",
+  "Claim Rewards": "Nhận Phần Thưởng",
   "Create Wallet": "Tạo ví",
   "Open Wallet": "Mở ví",
   "Set as default": "Đặt làm mặc định",
@@ -797,7 +801,7 @@
   "The contract address of DGC": "Địa chỉ hợp đồng của DGC",
   "Instructions": "Hướng dẫn",
   "If the problem remains unresolved, please join the Telegram group and follow us on X": "Nếu vấn đề vẫn chưa được giải quyết, vui lòng tham gia nhóm Telegram và theo dõi chúng tôi trên X",
-  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "Trước khi được phát hành trên mạng chính của bất kỳ nền tảng giao dịch nào, các mã thông báo DGC được đánh dấu là điểm. Những điểm này sẽ được chuyển đổi theo tỷ lệ 1:1 khi DGC được chính thức phát hành. Đội ngũ DGC sẽ đảm bảo rằng quá trình chuyển đổi này diễn ra suôn sẻ và ngăn chặn mọi sự lạm dụng của chính sách này.",
+  "Before the mainnet launch on any trading platform, DGC tokens are designated as points. When DGC is officially launched, these points will be converted at a predetermined ratio. The DGC team will ensure a smooth conversion process and prevent any misuse of this policy.": "Trước khi mainnet ra mắt trên bất kỳ nền tảng giao dịch nào, token DGC sẽ được ghi nhận dưới dạng điểm. Khi DGC chính thức ra mắt, những điểm này sẽ được chuyển đổi theo tỷ lệ định trước. Đội ngũ DGC sẽ đảm bảo quá trình chuyển đổi diễn ra suôn sẻ và ngăn chặn mọi hành vi lạm dụng chính sách này.",
   "About DBC": "Về DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "DeepBrainChain là chuỗi công khai AI đầu tiên trên thế giới. Mã thông báo bản địa của nó, DBC, được sử dụng làm phí khí trong dự án này. Bất kỳ giao dịch DGC nào đều yêu cầu một lượng nhất định các DBC danh nghĩa.",
   "Download DeGPT APP": "Tải xuống ứng dụng DeGPT",
