--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -77,6 +77,7 @@
   "Builder Mode": "构建模式",
   "Buy": "购买",
   "Node Sale": "节点销售",
+  "Purchase DGC": "购买DGC",
   "Buy Now": "立即购买",
   "Bypass SSL verification for Websites": "绕过网站的 SSL 验证",
   "Cancel": "取消",
@@ -119,6 +120,8 @@
   "Congratulations on successfully upgrading pro!": "恭喜成功升级为专业版！",
   "Upgrading pro failed!": "专业版升级失败!",
   "Connect Wallet": "连接钱包",
+  "Wallet": "钱包",
+  "Claim Rewards": "领取奖励",
   "Connections": "连接；联系；关联",
   "Content": "内容",
   "Context Length": "上下文长度",
@@ -628,6 +631,7 @@
   "You": "您",
   "You can copy the private key below:": "您可以复制下面的私钥：",
   "You can copy the website below:": "您可以复制下面的网址:",
+  "Copy the link and open it in a browser": "复制连接在浏览器中打开",
   "You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "您每天最多可以邀请 10 个朋友，每天的最高奖励为 10,000 个 DGC。",
   "You have no archived conversations.": "您没有已存档的对话记录。",
   "You have shared this chat": "您已经分享了此聊天记录",
@@ -805,7 +809,7 @@
   "The contract address of DGC": "DGC的合约地址",
   "Instructions": "说明",
   "If the problem remains unresolved, please join the Telegram group and follow us on X": "如问题未解决，请加入TG群和关注X",
-  "Prior to launching on the mainnet of any trading platform, DGC tokens are marked as points. These points will be converted at 1:1 ratio when DGC officially launches. DGC team will make sure that this transition goes smoothly and prevent any abuse of this policy.": "在任何交易平台的主网启动之前，DGC 代币被标记为积分。当 DGC 正式上线时，这些积分将按照 1:1 的比例进行转换。DGC 团队将确保这一转换过程顺利进行，并防止对这一政策的任何滥用。",
+  "Before the mainnet launch on any trading platform, DGC tokens are designated as points. When DGC is officially launched, these points will be converted at a predetermined ratio. The DGC team will ensure a smooth conversion process and prevent any misuse of this policy.": "在任何交易平台的主网启动之前，DGC 代币被标记为积分。当 DGC 正式上线时，这些积分将按照一定比例进行转换。DGC 团队将确保这一转换过程顺利进行，并防止对这一政策的任何滥用。",
   "About DBC": "关于 DBC",
   "DeepBrainChain is the world's first AI public chain. Its native token, DBC, is used as gas fee in this project. Any DGC transactions requires a certain amount of nominal DBCs.": "深脑链（DeepBrainChain）是世界上首个人工智能公链。其原生代币 DBC 在该项目中被用作燃气费（手续费）。任何 DGC 交易都需要一定数量的名义上的 DBC。",
   "Download DeGPT APP": "下载 DeGPT 应用",
